<resources>
    <string name="app_name">Waru Smart</string>
    <string name="title_statical_reports">Stadistics Reports</string>
    <string name="title_list_of_crops_in_progress">List of Crops in Progress</string>
    <string name="title_crop_information">Crop Information</string>
    <string-array name="roles_options">
        <item>Agriculturist</item>
        <item>Cooperative</item>
    </string-array>
    <string-array name="crop_info_options">
        <item>General Information</item>
        <item>IOT devices</item>
    </string-array>
    <string-array name="stadistics_options">
        <item>Water consumption</item>
        <item>Environment report</item>
        <item>Crop productivity</item>
    </string-array>
    <string name="select_crop">Select Crop</string>
    <string name="description_add_sowing">Enter the name and cultivated area. The start date will be recorded as the current date</string>
    <string name="title_add_sowing">Add Crop</string>
    <string name="description_add_control"> Enter leaf condition, stem condition and soil moisture</string>
    <string name="title_add_control">Add Control</string>
    <string name="title_search_diseases_pests">Search for diseases or pests</string>
    <string name="description_add_product">Enter the type of input, name and quantity used</string>
    <string name="title_add_product">Add Product</string>
    <string name="crops_history">Crops History</string>
    <string name="item_label">User Type</string>

    <style name="GreenAutoCompleteTextView" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
        <item name="endIconTint">#005F40</item>
    </style>

    <string name="title_activity_create_profile">CreateProfileActivity</string>
    <string name="title_forum_management">Consultation Forum</string>
    <string name="delete_question">Delete Question</string>
    <string name="edit_question">Edit Question</string>
    <string name="see_question">See Question</string>
    <string name="add_control">Add Control</string>
    <string name="search_for_disease_or_pest">Search for diseases or pest</string>
    <string name="add_product">Add Product</string>
</resources>
