<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_add_sowing"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/description_add_sowing"
        android:fontFamily="@font/poppins_regular"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner_crop_names"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/select_crop"
        android:background="@drawable/rounded_gray_background"
        android:padding="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/edittext_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_gray_background"
        android:hint="Enter area"
        android:inputType="numberDecimal"
        android:padding="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_add"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Add"
            android:backgroundTint="#116811"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:backgroundTint="#D3D3D3"
            android:textColor="#000000"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>