<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="15dp"
    android:layout_margin="10dp"
    android:layout_marginEnd="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtQuestionUser"
            android:padding="5dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtCategory"
            android:padding="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtQuestionDate"
            android:padding="5dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/btnDeleteQuestion"
                android:src="@drawable/ic_delete"
                android:padding="10dp"
                android:contentDescription="@string/delete_question"
                android:background="#FF0B0B"
                android:layout_marginEnd="10dp"
                />
            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/btnEditQuestion"
                android:src="@drawable/ic_edit"
                android:padding="10dp"
                android:contentDescription="@string/edit_question"
                android:background="#FEE100"
                android:layout_marginEnd="10dp"
                />

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/btnSeeQuestion"
                android:src="@drawable/ic_view"
                android:padding="10dp"
                android:contentDescription="@string/see_question"
                android:background="#006D18"
                />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>